--- a/matrufsc/package.json
+++ b/matrufsc/package.json
@@ -21,6 +21,7 @@
         "@vitejs/plugin-react": "^4.3.4",
         "globals": "^15.14.0",
         "prettier": "3.4.2",
+        "rollup-plugin-visualizer": "^5.12.0",
         "typescript": "~5.6.2",
         "vite": "^6.0.5"
     }
