--- a/matrufsc/package.json
+++ b/matrufsc/package.json
@@ -11,6 +11,7 @@
         "format": "prettier --write ."
     },
     "dependencies": {
+        "array-move": "^4.0.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
     },
