ci: add github pages settings in vite

--- a/matrufsc/package.json
+++ b/matrufsc/package.json
@@ -1,9 +1,12 @@
 {
     "name": "matrufsc",
+    "homepage": "https://caravelahc.github.io/matrufsc/",
     "private": true,
     "version": "0.0.0",
     "type": "module",
     "scripts": {
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d dist",
         "dev": "vite",
         "build": "tsc -b && vite build",
         "lint": "eslint .",
@@ -11,6 +14,7 @@
         "format": "prettier --write ."
     },
     "dependencies": {
+        "gh-pages": "^6.3.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
     },
